--- a/src/App.css
+++ b/src/App.css
@@ -8,22 +8,6 @@ body {
   margin: 0 auto;
 }
 
-.App header {
-  background-color: #181717;
-  height: 10vh;
-  min-height: 50px;
-  color: white;
-  position: fixed;
-  width: 100%;
-  max-width: 728px;
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  z-index: 99;
-  padding: 10px;
-  box-sizing: border-box;
-}
 
 .logo {
   height: 250px;
@@ -32,7 +16,7 @@ body {
 }
 
 .loginBtn {
-  width: 40%;
+  width: 80%;
   background-color: #eeeeee !important;
 }
 
@@ -51,7 +35,7 @@ body {
 main {
   padding: 10px;
   height: 80vh;
-  margin: 10vh 0 10vh;
+  margin: 2vh 0 10vh;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
@@ -73,7 +57,7 @@ form {
   height: 10vh;
   position: fixed;
   bottom: 0;
-  background-color: rgb(24, 23, 23);
+  background-color: #eeeeee;
   width: 100%;
   max-width: 728px;
   display: flex;
@@ -82,9 +66,7 @@ form {
 
 form button {
   width: 20%;
-  background-color: rgb(56, 56, 143);
 }
-
 
 input {
   line-height: 1.5;
@@ -97,17 +79,6 @@ input {
   padding: 0 10px;
 }
 
-button {
-  /*background-color: #282c34; !* Green *!*/
-  /*border: none;*/
-  /*color: white;*/
-  /*padding: 15px 32px;*/
-  /*text-align: center;*/
-  /*text-decoration: none;*/
-  /*display: inline-block;*/
-  /*cursor: pointer;*/
-  /*font-size: 1.25rem;*/
-}
 
 button:disabled {
   opacity: 0.5;
@@ -153,7 +124,7 @@ p {
 
 .sent p {
   color: white;
-  background: #0b93f6;
+  background: #4dabf5;
   align-self: flex-end;
 }
 .received p {
@@ -166,4 +137,10 @@ img {
   height: 40px;
   border-radius: 50%;
   margin: 2px 5px;
+}
+
+@media (min-width: 600px) {
+  .loginBtn {
+    width: 40%;
+  }
 }
