--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'horror';
+  font-style: normal;
+  font-weight: normal;
+  src: local('horror'), url(./fonts/horror.ttf) format("truetype ");
+}
