--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ body {
 }
 
 .heading {
-  font-family: 'horror' !important;
+  /*font-family: 'horror' !important;*/
   /*font-style: normal;*/
   /*font-weight: normal;*/
   color: white;
