Got font working

--- a/src/App.css
+++ b/src/App.css
@@ -21,9 +21,9 @@ body {
 }
 
 .heading {
-  /*font-family: 'horror' !important;*/
-  /*font-style: normal;*/
-  /*font-weight: normal;*/
+  font-family: 'dhf_story_brush_slantedRg' !important;
+  font-style: normal;
+  font-weight: normal;
   color: white;
 }
 
